--- a/legal-data-protection/gdpr-supplier-lists/supplier_lists.adoc
+++ b/legal-data-protection/gdpr-supplier-lists/supplier_lists.adoc
@@ -18,7 +18,7 @@
 
 === VONQ Suppliers ===
 
-Supplier lists: +
+Supplier list 2023: +
 * link:https://docs.google.com/spreadsheets/d/1ZBVmg8TjFYU0p-U3T4LRUgpBLfX0VIkJ[]
 
 List of VONQ suppliers: +
