Updating privacy policy docs

--- a/legal-website/versioning-privacy-policy/privacy-policy-latest.adoc
+++ b/legal-website/versioning-privacy-policy/privacy-policy-latest.adoc
@@ -13,17 +13,19 @@
 |restricted
 |Author:
 |DPO
+|Last changed:
+|31.05.2025
 |===
 
 [%header,format=adoc]
 |===
 Current Privacy Policy:
 
-include::privacy-policy-20220730.adoc[]
+include::privacy-policy-20250531.adoc[]
 |===
 
 |===
 Upcoming Privacy Policy:
 
-include::privacy-policy-20250430.adoc[]
+include::privacy-policy-20220730.adoc[]
 |===
