--- a/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
@@ -13,14 +13,13 @@
 |Author:
 |DPO
 |Last changed:
-|10.07.2025
+|14.07.2025
 |===
 
 == General ==
 
 === VONQ IT Security ===
-
-VONQ IT Security and Compliance folder: +
+VONQ IT security and compliance folder: +
 * link:https://drive.google.com/drive/folders/1RPqdWMCsRZN82c1NMLS3pWqNw4rEOeuc[]
 
 ISO 27001:2022 policy overview: +
@@ -36,17 +35,14 @@ IT Security Jira Epic: +
 * link:https://qandidate.atlassian.net/browse/DEVOPS-2845[]
 
 === VONQ Suppliers ===
-
 For supplier lists please see the respective directory: +
 * link:https://github.com/vonq/docs/tree/main/legal-data-protection/gdpr-supplier-lists[]
 
 === VONQ RoPa ===
-
 WIP document folder: +
-* link:https://drive.google.com/drive/folders/11ABUYaW94IB-ednuIjNbooSuRBEFLsgT
+* link:https://drive.google.com/drive/folders/11ABUYaW94IB-ednuIjNbooSuRBEFLsgT[]
 
 == Products ==
-
 Product Overwiew 2025: +
 * link:https://docs.google.com/presentation/d/1L88aG1DylocysP4765EBtVhHPXw6u5aOoiCzU9mmQZU[]
 
@@ -58,17 +54,17 @@ Product Overwiew 2025: +
 ==== CPA+ presentation ====
 * link:https://docs.google.com/presentation/d/1L88aG1DylocysP4765EBtVhHPXw6u5aOoiCzU9mmQZU[]
 
-==== CPA+ agreement with publishers ====
-* link:https://docs.google.com/document/d/1K-nV-h1Nfyqx7YJ9HJKY9LsnNKVR4e3v[]
-
+==== CPA+ DPA ====
 WIP DPA: +
 * link:https://docs.google.com/document/d/1UEopO_zrJCHkmt_APwHzzgxFIPKaloRsuTYuOaG9DSQ[]
+
+Agreement with publishers: +
+* link:https://docs.google.com/document/d/1K-nV-h1Nfyqx7YJ9HJKY9LsnNKVR4e3v[]
 
 === CPA+ HAPI DPA Draft ===
 * link:https://docs.google.com/document/d/1VTYzAgMS-z6EGYhbZySV38cZcrJvnNgH[]
 
 === AI Agents ===
-
 General Q&A: +
 * link:https://docs.google.com/document/d/1OnvwXtpLO9LALLc_ycoUM0PI7-XJRoF6GC_lqR_f0g0[]
 
@@ -80,7 +76,7 @@ APG Questions on AI Agents: +
 ==== HAPI partnership agreement ====
 * link:https://docs.google.com/document/d/1VDtOANjV5H7EC0VaLQkYlhQSWjW9QvXM[]
 
-==== HAPI Online DPA ====
+==== link:https://www.vonq.com/privacy-portal/online-dpa-hapi[HAPI Online DPA] ====
 * link:https://docs.google.com/document/d/1K-nV-h1Nfyqx7YJ9HJKY9LsnNKVR4e3v[]
 
 ==== HAPI DPA check ====
@@ -93,11 +89,9 @@ APG Questions on AI Agents: +
 === Job Post ===
 
 ==== Job Post ATS integrations ====
-
 * link:https://docs.google.com/spreadsheets/d/1CVbCKy8vIC5vAcfcEYsHDKZUOoj7Lyj7_RnvxWQVpaw[]
 
 ==== Job Post questionnaires ====
-
 ANWB questionnaire folder: +
 * link:https://drive.google.com/drive/folders/12zXakslQnm0yDTlEBHayM7jiz-nFX1bc[]
 
@@ -119,15 +113,15 @@ Publicis Group questionnaire folder: +
 Generali questionnaire: +
 * link:https://docs.google.com/spreadsheets/d/11JHKS6MPgvA_y2_nonUJTjEpiToxfTat[]
 
-Hilti questionnaire: +
+Hilti questionnaire and Q&A: +
 * link:https://docs.google.com/spreadsheets/d/1dWOjHPgotFwfRcZVqVwzsOvsTWiFA3OH[]
 * link:https://docs.google.com/spreadsheets/d/1j0HsPixQyji1n09QglI33Eq1GEyhbME7[]
+* link:https://docs.google.com/document/d/1FSzfVgit6j2p60XPQb48majFfM4KQHz3q0LZzWby_Uk[]
 
 Peek&Cloppenburg questionnaire (German): +
 * link:https://docs.google.com/spreadsheets/d/1QalUbdnZLJdkd30WXZf4rUtcNINaIgPw[]
 
 ==== Job Marketing ====
-
 EFSA questionnaire: +
 * link:https://docs.google.com/document/d/1Y4fF5h3_v9t4KXlFVO8IDqF2tW7ZlC-A[]
 * link:https://docs.google.com/spreadsheets/d/1nYcDeV7kgYevF5zDme07jVJVHo3rXka4ASDhXYfZxYI[]
@@ -138,14 +132,19 @@ WOLT questionnaire: +
 Univativ questionnaire (German): +
 * link:https://docs.google.com/spreadsheets/d/1KcAHuo7zyMtbNbj_8i9D2Tb_T6-fQWkL[]
 
-==== Programmatic ====
+JMP login page cookie list: +
+* link:https://docs.google.com/document/d/1bjc4ZIdPZlCiOc4wJoHUfjm7yshy1ERc[]
 
+=== AI agents ===
+AI agent FAQ: +
+* link:https://docs.google.com/spreadsheets/d/1-4GbUmmDHHT3RQrC4MEY0rSvWQQD4N0u[]
+
+==== Programmatic ====
 Ericsson questionnaire: +
 * link:https://docs.google.com/spreadsheets/d/1U2KUC1PueLrpkuxYhErEtdKJaj95tb1A[]
 
 == Parties ==
 
 === Job Boards ===
-
 Current Job Board agreement: +
 * link:https://www.vonq.com/vonq-parnership-tcs-docx[]
